# Semester5

CG/Assignments/1/Assignment01_code/: CMakeLists.txt  Custom Test - Codeforces.html
CG/Assignments/1/practice/: CMakeLists.txt  main.cpp  main_refer.cpp  try1.cpp
CG/Lab1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
CG/Lab1/Lab1/: .main.cpp.swp  CMakeLists.txt  main.cpp
CN/assignments/2/: 2015049_PA1.c  2015049_PA1_1.c  a.out  client  client.c  connect.c  server  server.c  showip  showip.c  structs.txt  telnet  telnet.c  telnet2.c
CN/assignments/3/: 2015049Client.java  2015049Server.java  2015049Thread.java  MultiThreadChatClient.java  README
CN/assignments/3/submisstion/: client.java  server.java  thread.java
CN/assignments/4/: 2015049_README  Client_2015049r1.java  Server_2015049r1.java  Try.java
CN/assignments/5/submission/: README_2015049  client_2015049r1.java  packet_2015049r1.java  server_2015049r1.java
CN/assignments/6/: README_2015049  Routing_Protocols_2015049.java  routing_algo.java
CN/assignments/6/rattey/: Routing_2015040.java  algo.java
CN/assignments/workspace/.metadata/: version.ini
CN/assignments/workspace/CN_Assgnt2_Chat_Server/: .project
EVS/: lectureslides-i_12993.pptx  lectureslides-ii_12994.pptx
ML/Project/Report/: points.txt
ML/Project/jsma/: NueralNet.py  jsma.py  jsma_2.py  model.py
ML/Template/: train.py
ML/assignments/2/submission/: SVM.py  (+7 more)
ML/assignments/Template/: predict.py  try.py  visualize.py
ML/homework1_12909/Template/: visualize.py
TCOM/: treport.main  treport.points
(+79 files in other folders)
